<resources>
    <string name="app_name">EnCityProject</string>
    <string name="title_activity_main_with_navi_drawer">Місто у твоїй кишені</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Місто у твоїй кишені</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_phones_book">Довідник</string>
    <string name="menu_weather">Погода</string>
    <string name="menu_reg">Хочу більше</string>
    <string name="menu_market">Віртуальний ринок</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_description">Знижка</string>
    <string name="menu_send">Send</string>
    <string name="menu_discount">Знижки</string>
    <string name="menu_bench">Розумна лава</string>
    <string name="menu_helsi">Лікарня</string>
    <string name="menu_firstAid">Перша медична допомога</string>
    <string name="btn_usb">Отримати доступ до зарядки</string>
    <string name="api_key_weather">8b74b289dcce4dabda34734197b8deb5</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bt_center_map_description">center map</string>
    <string name="menu_busmap">Громадський транспорт</string>
    <string name="bus_1">Маршрут 2</string>
    <string name="bus_2">Маршрут 3</string>
    <string name="bus_3">Маршрут 4</string>
    <string name="bus_4">Маршрут 5</string>
    <string name="bus_5">Маршрут 7</string>
    <string name="menu_news">Новини</string>
    <string name="algorithm">Алгоритм оказания первой помощи</string>
    <string name="algorithm_text">\t Чтобы не растеряться и грамотно оказать первую помощь, \n
        важно соблюдать следующую последовательность действий: \n
\t 1. Убедиться, что при оказании первой помощи вам ничего не угрожает и вы не подвергаете себя опасности. \n
\t 2. Обеспечить безопасность пострадавшему и окружающим (например, извлечь пострадавшего из горящего автомобиля). \n
\t 3. Проверить наличие у пострадавшего признаков жизни (пульс, дыхание, реакция зрачков на свет) и сознания. Для проверки дыхания необходимо запрокинуть голову пострадавшего, наклониться к его рту и носу и попытаться услышать или почувствовать дыхание. Для обнаружения пульса необходимо приложить подушечки пальцев к сонной артерии пострадавшего. Для оценки сознания необходимо (по возможности) взять пострадавшего за плечи, аккуратно встряхнуть и задать какой-либо вопрос. \n
\t 4. Вызвать специалистов: 113. \n
\t 5. Оказать неотложную первую помощь. В зависимости от ситуации это может быть: \n
- восстановление проходимости дыхательных путей; \n
- сердечно-лёгочная реанимация; \n
- остановка кровотечения и другие мероприятия. \n
\t 6. Обеспечить пострадавшему физический и психологический комфорт, дождаться прибытия специалистов.</string>
    <string name="breathe_in">\t Искусственная вентиляция лёгких (ИВЛ) — это введение
        воздуха (либо кислорода) в дыхательные пути человека с целью
        восстановления естественной вентиляции лёгких. Относится
        к элементарным реанимационным мероприятиям.
        \n Типичные ситуации, требующие ИВЛ:
        \n \t - автомобильная авария;
        \n \t - происшествие на воде;
        \n \t - удар током и другие.
        \n \t Существуют различные способы ИВЛ. Наиболее эффективным при оказании первой помощи
        неспециалистом считается искусственное дыхание рот в рот и рот в нос.
        \n \t Если при осмотре пострадавшего естественное дыхание не обнаружено, необходимо немедленно
        провести искусственную вентиляцию легких.</string>
    <string name="breathe_in_1">\t 1.Обеспечьте проходимость верхних дыхательных путей.
        Поверните голову пострадавшего набок и пальцем удалите из
        полости рта слизь, кровь, инородные предметы. Проверьте носовые
        ходы пострадавшего, при необходимости очистите их.</string>
    <string name="breathe_in_2">\t 2. Запрокиньте голову пострадавшего, удерживая шею одной
        рукой. Не меняйте положение головы пострадавшего при травме позвоночника!</string>
    <string name="breathe_in_3">\t 3. Положите на рот пострадавшего салфетку, платок, кусок
        ткани или марли, чтобы защитить себя от инфекций.Зажмите
        нос пострадавшего большим и указательным пальцем. Глубоко
        вдохните, плотно прижмитесь губами ко рту пострадавшего.
        Сделайте выдох в лёгкие пострадавшего.
        \t \n Первые 5–10 выдохов должны быть быстрыми (за 20–30 секунд),
        затем — 12–15 выдохов в минуту.
    </string>
    <string name="breathe_in_4">\t 4. Следите за движением грудной клетки пострадавшего. Если
        грудь пострадавшего при вдохе воздуха поднимается, значит, вы всё
        делаете правильно.</string>
    <string name="indirect_cardiac_massage">\t Если вместе с дыханием отсутствует пульс, необходимо сделать
        \n непрямой массаж сердца. Непрямой (закрытый) массаж сердца,
        \n или компрессия грудной клетки, — это сжатие мышц сердца между
        \n грудиной и позвоночником в целях поддержания кровообращения
        \n человека при остановке сердца. Относится к элементарным
        \n реанимационным мероприятиям. Внимание! Нельзя проводить
        \n закрытый массаж сердца при наличии пульса.</string>
    <string name="indirect_cardiac_massage_1">\t 1. Уложите пострадавшего на плоскую твёрдую поверхность.
        \n На кровати и других мягких поверхностях проводить компрессию
        \n грудной клетки нельзя.
        \n \t 2. Определите расположение у пострадавшего
        \n мечевидного отростка. Мечевидный отросток — это самая короткая
        \n и узкая часть грудины, её окончание.
        \n \t 3. Отмерьте 2–4 см вверх от мечевидного отростка — это точка
        \n компрессии.
        \n \t 4. Положите основание ладони на точку компрессии. При этом
        \n большой палец должен указывать либо на подбородок, либо на
        \n живот пострадавшего, в зависимости от местоположения лица,
        \n осуществляющего реанимацию. Поверх одной руки положите
        \n вторую ладонь, пальцы сложите в замок. Надавливания проводятся
        \n строго основанием ладони — ваши пальцы не должны
        \n соприкасаться с грудиной пострадавшего.
        \n \t 5. Осуществляйте ритмичные толчки грудной клетки сильно,
        \n плавно, строго вертикально, тяжестью верхней половины вашего
        \n тела. Частота — 100–110 надавливаний в минуту. При этом грудная
        \n клетка должна прогибаться на 3–4 см.
        \n
        \n \t Грудным детям непрямой массаж сердца производится
        \n указательным и средним пальцем одной руки. Подросткам —
        \n ладонью одной руки.
        \n \t Если одновременно с закрытым массажем сердца проводится
        \n ИВЛ, каждые два вдоха должны чередоваться с 30
        \n надавливаниями на грудную клетку.</string>
    <string name="indirect_cardiac_massage_2">\t Если во время проведения реанимационных мероприятий
        \n у пострадавшего восстановилось дыхание или появился пульс,
        \n прекратите оказание первой помощи и уложите человека на бок,
        \n положив ладонь под голову. Следите за его состоянием
        \n до прибытия медиков.</string>
    <string name="bleeding_1">\t Остановка кровотечения — это меры, направленные на остановку
        \n потери крови. При оказании первой помощи речь идёт об остановке
        \n наружного кровотечения. В зависимости от типа сосуда выделяют
        \n капиллярное, венозное и артериальное кровотечения.
        \n \t Остановка капиллярного кровотечения осуществляется путём
        \n наложения асептической повязки, а также, если ранены руки или
        \n ноги, поднятием конечностей выше уровня туловища.
        \n \t При венозном кровотечении накладывается давящая повязка.
        \n Для этого выполняется тампонада раны: на рану накладывается
        \n марля, поверх неё укладывается несколько слоёв ваты (если нет
        \n ваты — чистое полотенце), туго бинтуется. Сдавленные такой
        \n повязкой вены быстро тромбируются, и кровотечение
        \n прекращается. Если давящая повязка промокает, сильно надавите
        \n на неё ладонью.
        \n \t Чтобы остановить артериальное кровотечение, артерию необходимо пережать.</string>
    <string name="bleeding_2">\t Техника пережатия артерии: сильно прижмите артерию пальцами
        \n или кулаком к подлежащим костным образованиям.
        \n \t Артерии легкодоступны для пальпации, поэтому данный способ
        \n весьма эффективен. Однако он требует от лица, оказывающего
        \n первую помощь, физической силы.
        \n \t Если кровотечение не остановилось после наложения тугой
        \n повязки и прижатия артерии, примените жгут. Помните, что это
        \n крайняя мера, когда другие способы не помогают.</string>
    <string name="bleeding_3">\t 1. Наложите жгут на одежду или мягкую подкладку чуть выше
        \n раны.
        \n \t 2. Затяните жгут и проверьте пульсацию сосудов: кровотечение
        \n должно прекратиться, а кожа ниже жгута — побледнеть.
        \n \t 3. Наложите повязку на рану.
        \n \t 4. Запишите точное время, когда наложен жгут.
        \n
        \n \t Жгут на конечности можно накладывать максимум на 1 час.
        \n По его истечении жгут необходимо ослабить на 10–15 минут. При
        \n необходимости можно затянуть вновь, но не более чем на 20 минут.</string>
    <string name="fractures_1">\t Перелом — нарушение целостности кости.
        \n Перелом сопровождается сильной болью, иногда — обмороком или
        \n шоком, кровотечением. Различают открытые и закрытые
        \n переломы. Первый сопровождается ранением мягких тканей, в
        \n ране иногда заметны обломки кости.</string>
    <string name="fractures_2">\t 1. Оцените тяжесть состояния пострадавшего, определите
        \n локализацию перелома.
        \n \t 2. При наличии кровотечения остановите его.
        \n \t 3. Определите, возможно ли перемещение пострадавшего до
        \n прибытия специалистов.
        \n \t Не переносите пострадавшего и не меняйте его положения при
        \n травмах позвоночника!
        \n \t 4. Обеспечьте неподвижность кости в области перелома —
        \n проведите иммобилизацию. Для этого необходимо обездвижить
        \n суставы, расположенные выше и ниже перелома.
        \n \t 5. Наложите шину. В качестве шины можно использовать плоские
        \n палки, доски, линейки, прутья и прочее. Шину необходимо плотно,
        \n но не туго зафиксировать бинтами или пластырем.
        \n \t При закрытом переломе иммобилизация производится поверх
        \n одежды. При открытом переломе нельзя прикладывать шину к
        \n местам, где кость выступает наружу.</string>
    <string name="burns_1">\t Ожог — это повреждение тканей организма под действием
        \n высоких температур или химических веществ. Ожоги различаются
        \n по степеням, а также по типам повреждения. По последнему
        \n основанию выделяют ожоги:
        \n \t - термические (пламя, горячая жидкость, пар, раскалённые
        \n предметы);
        \n \t - химические (щёлочи, кислоты);
        \n \t - электрические; лучевые (световое и ионизирующее излучение);
        \n \t - комбинированные.</string>
</resources>