<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"

    >

    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_phonesBook"
            android:icon="@drawable/phonecall"
            android:title="@string/menu_phones_book" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/weather"
            android:title="@string/menu_weather" />
        <item
            android:id="@+id/nav_discount"
            android:icon="@drawable/discount"
            android:title="@string/menu_discount" />
        <item
            android:id="@+id/nav_bench"
            android:icon="@drawable/bench"
            android:title="@string/menu_bench" />
        <item
            android:id="@+id/nav_busmap"
            android:icon="@drawable/bus"
            android:title="@string/menu_busmap" />

        <item
        android:id="@+id/nav_helsi"
        android:icon="@drawable/helsi"
        android:title="@string/menu_helsi" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news"
            android:title="@string/menu_news" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>-->

</menu>
