<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_phonesBook">

    <fragment
        android:id="@+id/nav_phonesBook"
        android:name="encityproject.rightcodeit.com.encityproject.ui.phonesBook.PhonesFragment"
        android:label="@string/menu_phones_book"
        tools:layout="@layout/fragment_phones" />

    <fragment
        android:id="@+id/nav_weather"
        android:name="encityproject.rightcodeit.com.encityproject.ui.weatherData.WeatherFragment"
        android:label="@string/menu_weather"
        tools:layout="@layout/fragment_weather" />

   <fragment
        android:id="@+id/nav_slideshow"
        android:name="encityproject.rightcodeit.com.encityproject.ui.discount.DiscountFragment"
        android:label="@string/menu_discount"
        tools:layout="@layout/fragment_discount" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="encityproject.rightcodeit.com.encityproject.ui.benchMap.BenchFragmentNew"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_beanch_new" />
    <fragment
        android:id="@+id/nav_busmap"
        android:name="encityproject.rightcodeit.com.encityproject.busTracker.BusMapFragment"
        android:label="@string/menu_busmap"
        tools:layout="@layout/fragment_bus_map" />

    <fragment
        android:id="@+id/nav_description"
        android:name="encityproject.rightcodeit.com.encityproject.ui.discount.DescriptionFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_description" />
<!--
    <fragment
        android:id="@+id/nav_share"
        android:name="encityproject.rightcodeit.com.encityproject.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="encityproject.rightcodeit.com.encityproject.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />-->
</navigation>