<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:fab="http://schemas.android.com/apk/res-auto">

        <org.osmdroid.views.MapView android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <com.getbase.floatingactionbutton.FloatingActionsMenu
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            fab:fab_addButtonColorNormal="@color/bus_red"
            fab:fab_addButtonColorPressed="@color/gray"
            fab:fab_addButtonPlusIconColor="@color/white"
            fab:fab_labelStyle="@style/menu_labels_style"
            fab:fab_labelsPosition="left"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp">
            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_action1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/bus_red"
                app:fab_colorPressed="@color/gray"
                app:fab_size="normal"
                app:fab_icon="@drawable/ic_directions_bus_black_24dp"
                app:fab_title="@string/bus_1"
                />
            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_action2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/bus_green"
                app:fab_colorPressed="@color/gray"
                app:fab_size="normal"
                app:fab_icon="@drawable/ic_directions_bus_black_24dp"
                app:fab_title="@string/bus_2"/>
            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_action3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/bus_blue"
                app:fab_colorPressed="@color/gray"
                app:fab_size="normal"
                app:fab_icon="@drawable/ic_directions_bus_black_24dp"
                app:fab_title="@string/bus_3"/>
            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_action4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/bus_yellow"
                app:fab_colorPressed="@color/gray"
                app:fab_size="normal"
                app:fab_icon="@drawable/ic_directions_bus_black_24dp"
                app:fab_title="@string/bus_4"/>
            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_action5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/bus_purple"
                app:fab_colorPressed="@color/gray"
                app:fab_size="normal"
                app:fab_icon="@drawable/ic_directions_bus_black_24dp"
                app:fab_title="@string/bus_5"/>
        </com.getbase.floatingactionbutton.FloatingActionsMenu>



    </android.support.constraint.ConstraintLayout>